# gandyndns

./: .gitignore  README.md  gandyndns.conf  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
gandyndns/: __init__.py  __main__.py  cli.py  core.py
scripts/: gandyndns
tests/: test_cli.py  test_core.py
